[package]
name = "love-fetch"
version = "1.1.2"
authors = ["DarkCh4osss <fgrimaldi@fabiogrimaldi-dev.it>"]
edition = "2018"
description = "A sys information tool for my lovers"
readme = "README.md"
repository = "https://github.com/DarkCh4osss/love-fetch"
license = "MIT"
keywords = ["system", "cli", "love"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
whoami = "1.1.1"
sysinfo = { version = "0.16.5", default-features = false }